--- a/test/SConscript
+++ b/test/SConscript
@@ -1,7 +1,10 @@
-from __future__ import print_function
-from buildutils import *
+import os
 import subprocess
 from xml.etree import ElementTree
+from os.path import join as pjoin
+import time
+
+from buildutils import *
 
 Import('env','build','install')
 localenv = env.Clone()
