--- a/samples/cxx/SConscript
+++ b/samples/cxx/SConscript
@@ -1,3 +1,5 @@
+from os.path import join as pjoin
+import os
 from buildutils import *
 
 Import('env', 'build', 'install', 'buildSample')
@@ -31,6 +33,7 @@ set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS})
     else:
         localenv['cmake_extra'] = ''
 
+    # TODO: Accelerate is only used if other BLAS/LAPACK are not used
     if env["OS"] == "Darwin":
         localenv["cmake_extra"] += "find_library(ACCELERATE_FRAMEWORK Accelerate)"
 
