--- a/platform/posix/SConscript
+++ b/platform/posix/SConscript
@@ -7,7 +7,7 @@ localenv = env.Clone()
 
 # Copy man pages
 if env['INSTALL_MANPAGES']:
-    install('$inst_mandir', mglob(localenv, '#platform/posix/man', '*'))
+    install('$inst_mandir', multi_glob(localenv, '#platform/posix/man', '*'))
 
 ### Generate customized scripts ###
 
