--- a/ext/SConscript
+++ b/ext/SConscript
@@ -39,7 +39,7 @@ libs = [('libexecstream', ['cpp'], prep_default)]
 
 for subdir, extensions, prepFunction in libs:
     localenv = prepFunction(env)
-    objects = localenv.SharedObject(mglob(localenv, subdir, *extensions))
+    objects = localenv.SharedObject(multi_glob(localenv, subdir, *extensions))
     libraryTargets.extend(objects)
 
 if not env['system_fmt']:
@@ -47,7 +47,7 @@ if not env['system_fmt']:
     localenv = prep_default(env)
     localenv.Prepend(CPPPATH=Dir('#ext/fmt/include'))
     libraryTargets.extend(
-        localenv.SharedObject(mglob(localenv, 'fmt/src', 'cc')))
+        localenv.SharedObject(multi_glob(localenv, 'fmt/src', 'cc')))
     for name in ('format.h', 'ostream.h', 'printf.h', 'core.h', 'format-inl.h'):
         build(copyenv.Command("#include/cantera/ext/fmt/" + name,
                               "#ext/fmt/include/fmt/" + name,
@@ -72,7 +72,7 @@ if env['system_sundials'] == 'n':
     # Copy sundials header files into common include directory
     for subdir in ('sundials', 'nvector', 'cvodes', 'ida', 'sunmatrix',
                    'sunlinsol', 'sunnonlinsol'):
-        for header in mglob(env, 'sundials/include/'+subdir, 'h'):
+        for header in multi_glob(env, 'sundials/include/'+subdir, 'h'):
             build(copyenv.Command('#include/cantera/ext/%s/%s' % (subdir, header.name),
                                   '#ext/sundials/include/%s/%s' % (subdir, header.name),
                                   Copy('$TARGET', '$SOURCE')))
@@ -87,7 +87,7 @@ if env['system_sundials'] == 'n':
 
     for subdir in subdirs:
         libraryTargets.extend(localenv.SharedObject(
-            [f for f in mglob(localenv, 'sundials/src/'+subdir, 'c')
+            [f for f in multi_glob(localenv, 'sundials/src/'+subdir, 'c')
              if not f.name.startswith('fsun')]))
 
 if not env['system_yamlcpp']:
@@ -97,7 +97,7 @@ if not env['system_yamlcpp']:
 
     # Copy header files into common include directory
     for subdir in ('', 'contrib', 'node', 'node/detail'):
-        for header in mglob(env, 'yaml-cpp/include/yaml-cpp/'+subdir, 'h'):
+        for header in multi_glob(env, 'yaml-cpp/include/yaml-cpp/'+subdir, 'h'):
             h = build(localenv.Command('#include/cantera/ext/yaml-cpp/{}/{}'.format(subdir, header.name),
                                        '#ext/yaml-cpp/include/yaml-cpp/{}/{}'.format(subdir, header.name),
                                        Copy('$TARGET', '$SOURCE')))
@@ -105,7 +105,7 @@ if not env['system_yamlcpp']:
     # Compile yaml-cpp source files
     for subdir in ('', 'contrib'):
         libraryTargets.extend(localenv.SharedObject(
-            [f for f in mglob(localenv, 'yaml-cpp/src/'+subdir, 'cpp')]))
+            [f for f in multi_glob(localenv, 'yaml-cpp/src/'+subdir, 'cpp')]))
 
 
 if not env['system_eigen']:
