--- a/interfaces/cython/SConscript
+++ b/interfaces/cython/SConscript
@@ -14,7 +14,7 @@ cythonized = localenv.Command(
     'cantera/_cantera.pyx',
     '''${python_cmd} -c "import Cython.Build; Cython.Build.cythonize('${SOURCE}')"''')
 
-for f in mglob(localenv, 'cantera', 'pyx', 'pxd'):
+for f in multi_glob(localenv, 'cantera', 'pyx', 'pxd'):
     localenv.Depends(cythonized, f)
 
 for line in open('cantera/_cantera.pxd'):
@@ -84,15 +84,15 @@ localenv.Depends(mod, ext)
 localenv.Depends(mod, dataFiles + testFiles)
 localenv.Depends(ext, localenv['cantera_staticlib'])
 
-for f in (mglob(localenv, 'cantera', 'py') +
-          mglob(localenv, 'cantera/test', 'py') +
-          mglob(localenv, 'cantera/examples/kinetics', 'py') +
-          mglob(localenv, 'cantera/examples/multiphase', 'py') +
-          mglob(localenv, 'cantera/examples/onedim', 'py') +
-          mglob(localenv, 'cantera/examples/reactors', 'py') +
-          mglob(localenv, 'cantera/examples/surface_chemistry', 'py') +
-          mglob(localenv, 'cantera/examples/thermo', 'py') +
-          mglob(localenv, 'cantera/examples/transport', 'py')):
+for f in (multi_glob(localenv, 'cantera', 'py') +
+          multi_glob(localenv, 'cantera/test', 'py') +
+          multi_glob(localenv, 'cantera/examples/kinetics', 'py') +
+          multi_glob(localenv, 'cantera/examples/multiphase', 'py') +
+          multi_glob(localenv, 'cantera/examples/onedim', 'py') +
+          multi_glob(localenv, 'cantera/examples/reactors', 'py') +
+          multi_glob(localenv, 'cantera/examples/surface_chemistry', 'py') +
+          multi_glob(localenv, 'cantera/examples/thermo', 'py') +
+          multi_glob(localenv, 'cantera/examples/transport', 'py')):
     localenv.Depends(mod, f)
 
 # Determine installation path and install the Python module
