--- a/samples/cxx/SConscript
+++ b/samples/cxx/SConscript
@@ -44,7 +44,7 @@ set(CMAKE_EXE_LINKER_FLAGS ${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS})
         print("INFO: Skipping sample {} because 'omp.h' was not found.".format(name))
     else:
         buildSample(localenv.Program, pjoin(subdir, name),
-                    mglob(localenv, subdir, *extensions))
+                    multi_glob(localenv, subdir, *extensions))
 
     # Note: These Makefiles and SConstruct files are automatically installed
     # by the "RecursiveInstall" that grabs everything in the cxx directory.
