--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,11 +38,14 @@ jobs:
     - name: Upgrade pip
       run: python3 -m pip install -U pip setuptools wheel
     - name: Install Python dependencies
-      run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas
+      run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas pytest
+        pytest-github-actions-annotate-failures
     - name: Build Cantera
       run: python3 `which scons` build -j2 debug=n
     - name: Test Cantera
       run: python3 `which scons` test
+      env:
+        GITHUB_ACTIONS: "true"
 
   macos-multiple-pythons:
     name: macOS with Python ${{ matrix.python-version }}
@@ -75,11 +78,14 @@ jobs:
     - name: Upgrade pip
       run: python3 -m pip install -U pip 'setuptools>=47.0.0,<48' wheel
     - name: Install Python dependencies
-      run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas
+      run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas pytest
+        pytest-github-actions-annotate-failures
     - name: Build Cantera
       run: python3 `which scons` build -j2 debug=n
     - name: Test Cantera
       run: python3 `which scons` test
+      env:
+        GITHUB_ACTIONS: "true"
 
   # Coverage is its own job because macOS builds of the samples
   # use Homebrew gfortran which is not compatible for coverage
@@ -105,13 +111,16 @@ jobs:
     - name: Upgrade pip
       run: python3 -m pip install -U pip setuptools wheel
     - name: Install Python dependencies
-      run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas
+      run: python3 -m pip install ruamel.yaml scons numpy cython h5py pandas pytest
+        pytest-github-actions-annotate-failures
     - name: Build Cantera
       run: |
         python3 `which scons` build blas_lapack_libs=lapack,blas coverage=y \
         optimize=n no_optimize_flags=-DNDEBUG -j2
     - name: Test Cantera
       run: python3 `which scons` test
+      env:
+        GITHUB_ACTIONS: "true"
     - name: Upload Coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash)
       env:
@@ -326,7 +335,7 @@ jobs:
       - name: Install Python dependencies
         run: |
           python -m pip install -U pip 'setuptools>=47.0.0,<48'
-          python -m pip install scons pypiwin32 numpy ruamel.yaml cython h5py pandas
+          python -m pip install scons pypiwin32 numpy ruamel.yaml cython h5py pandas pytest pytest-github-actions-annotate-failures
       - name: Restore Boost cache
         uses: actions/cache@v2
         id: cache-boost
@@ -351,3 +360,5 @@ jobs:
         shell: cmd
       - name: Test Cantera
         run: scons test
+        env:
+          GITHUB_ACTIONS: "true"
