--- a/test/SConscript
+++ b/test/SConscript
@@ -139,6 +139,8 @@ def addPythonTest(testname, subdir, script, interpreter, outfile,
         cmdargs = args.split()
         if env["fast_fail_tests"]:
             cmdargs.insert(0, "fast_fail")
+        if env["skip_slow_tests"]:
+            environ["CT_SKIP_SLOW"] = "1"
 
         code = subprocess.call(
             [env.subst(interpreter), source[0].abspath] + cmdargs,
