[CI] Add checks for serialization of new ReactionRate objects

--- a/test/data/kineticsfromscratch.yaml
+++ b/test/data/kineticsfromscratch.yaml
@@ -45,3 +45,5 @@ reactions:
   - [8.2883, -1.1397, -0.12059, 0.016034]
   - [1.9764, 1.0037, 7.2865e-03, -0.030432]
   - [0.3177, 0.26889, 0.094806, -7.6385e-03]
+- equation: H + 2 O2 <=> HO2 + O2 # Reaction 6
+  rate-constant: {A: 2.08e+19, b: -1.24, Ea: 0.0}
