[CI] Disable multithreading when using OpenBLAS

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -216,6 +216,8 @@ jobs:
   multiple-sundials:
     name: Sundials ${{ matrix.sundials-ver }}
     runs-on: ubuntu-latest
+    env:
+      OPENBLAS_NUM_THREADS: "1"
     defaults:
       run:
         shell: bash -l {0}
