[SCons] Fix type reference and missing import
In #1012, normapth was no longer exported from buildutils, but I missed
adding that import in the builder for python_minimal. In addition, Dict
is only available while type checking in buildutils, so it should be
quoted as a forward reference.

--- a/interfaces/python_minimal/SConscript
+++ b/interfaces/python_minimal/SConscript
@@ -1,5 +1,5 @@
 """Minimal Python Module"""
-from os.path import join as pjoin
+from os.path import join as pjoin, normpath
 from buildutils import *
 
 Import('env', 'build', 'install')
