--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,8 @@ jobs:
     - name: Build Cantera
       run: python3 `which scons` build env_vars=all -j2 debug=n --debug=time
     - name: Test Cantera
-      run: python3 `which scons` test --debug=time
+      run:
+        python3 `which scons` test show_long_tests=yes verbose_tests=yes --debug=time
       env:
         GITHUB_ACTIONS: "true"
 
@@ -85,7 +86,8 @@ jobs:
     - name: Build Cantera
       run: python3 `which scons` build env_vars=all -j3 debug=n --debug=time
     - name: Test Cantera
-      run: python3 `which scons` test --debug=time
+      run:
+        python3 `which scons` test show_long_tests=yes verbose_tests=yes --debug=time
       env:
         GITHUB_ACTIONS: "true"
 
@@ -120,7 +122,8 @@ jobs:
         python3 `which scons` build blas_lapack_libs=lapack,blas coverage=y \
         optimize=n skip_slow_tests=y no_optimize_flags=-DNDEBUG env_vars=all -j2 --debug=time
     - name: Test Cantera
-      run: python3 `which scons` test --debug=time
+      run:
+        python3 `which scons` test show_long_tests=yes verbose_tests=yes --debug=time
       env:
         GITHUB_ACTIONS: "true"
     - name: Upload Coverage to Codecov
@@ -253,7 +256,7 @@ jobs:
           extra_lib_dirs=$CONDA_PREFIX/lib system_fmt=y system_eigen=y system_yamlcpp=y \
           system_sundials=y blas_lapack_libs='lapack,blas' -j2 VERBOSE=True debug=n
       - name: Test Cantera
-        run: scons test
+        run: scons test show_long_tests=yes verbose_tests=yes
 
   cython-latest:
     name: Test pre-release version of Cython
@@ -281,7 +284,7 @@ jobs:
     - name: Build Cantera
       run: python3 `which scons` build blas_lapack_libs=lapack,blas python_package='full' -j2 debug=n
     - name: Test Cantera
-      run: python3 `which scons` test
+      run: python3 `which scons` test show_long_tests=yes verbose_tests=yes
 
   windows:
     name: ${{ matrix.os }}, MSVC ${{ matrix.vs-toolset }}, Python ${{ matrix.python-version }}
@@ -347,6 +350,6 @@ jobs:
           msvc_version=${{ matrix.vs-toolset }} f90_interface=n --debug=time
         shell: cmd
       - name: Test Cantera
-        run: scons test --debug=time
+        run: scons test show_long_tests=yes verbose_tests=yes --debug=time
         env:
           GITHUB_ACTIONS: "true"
