Adding a test for single reactor initialize fix.
I adapted the example ./interfaces/cython/cantera/test_reactor.py::test_equilibrium_HP to C++ and performed the reactor initialization with an arbitrary value to show that it no longer creates a segmentation fault and also still integrates successfully in a network post individual initialization. I added this to it's own folder called zeroD because I could not find C++ instances of Reactor tests elsewhere.

--- a/test/SConscript
+++ b/test/SConscript
@@ -290,6 +290,7 @@ addTestProgram('thermo', 'thermo')
 addTestProgram('equil', 'equil')
 addTestProgram('kinetics', 'kinetics')
 addTestProgram('transport', 'transport')
+addTestProgram('zeroD', 'zeroD')
 
 python_subtests = ['']
 test_root = '#interfaces/cython/cantera/test'
