--- a/include/cantera/base/config.h.in
+++ b/include/cantera/base/config.h.in
@@ -43,6 +43,7 @@ typedef int ftnlen;       // Fortran hidden string length type
 {CT_USE_LAPACK!s}
 
 {CT_USE_SYSTEM_EIGEN!s}
+{CT_USE_SYSTEM_EIGEN_PREFIXED!s}
 {CT_USE_SYSTEM_FMT!s}
 {CT_USE_SYSTEM_YAMLCPP!s}
 {CT_USE_DEMANGLE!s}
